Trained my first NN

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -869,22 +869,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "id": "1ce7fa83-10f6-4db3-af13-4b1889eaffc1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Value(0.3288882446713602)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x = [2.0, 3.0]\n",
+    "x = [2.0, 3.0, 5.0]\n",
+    "n = MLP(3, [4,4,1])\n",
+    "n(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "id": "c2cbe9c0-e63b-44cc-86c0-4cdcab602f85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Value(5.1033649189530506)"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = MLP(3, [4,4,1])\n",
+    "xs = [\n",
+    "    [2.0, 3.0, 5.0],\n",
+    "    [-4.0, 2.5, 2.0],\n",
+    "    [-1.0, 1.0, 3.0],\n",
+    "    [0.5, 3.5, 1.5],\n",
+    "]\n",
+    "ys = [1.0, -1.0, -1.0, 1.0]  # desired targets\n",
     "\n",
-    "n = Neuron(5)\n",
-    "l = Layer(2, 3)\n",
-    "mlp = MLP()"
+    "\n",
+    "# The smaller the loss, the closer the prediction is to the desired outputs\n",
+    "# So we want to minimise the loss\n",
+    "ypred = [n(x) for x in xs]\n",
+    "loss = sum((youts - ygt)**2 for ygt, youts in zip(ys, ypred))\n",
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "id": "4b9f8425-679f-4430-b84d-579019161242",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 5.1033649189530506\n",
+      "1 3.4069671121949066\n",
+      "2 2.010522404594181\n",
+      "3 0.9943480856590661\n",
+      "4 0.5817297204628116\n",
+      "5 0.3754970589199896\n",
+      "6 0.2637338406603032\n",
+      "7 0.19771602683302875\n",
+      "8 0.15567944018846802\n",
+      "9 0.12720856229985664\n",
+      "10 0.10694582209602638\n",
+      "11 0.0919369441025807\n",
+      "12 0.08045146220096103\n",
+      "13 0.07142250323835343\n",
+      "14 0.0641631641062899\n",
+      "15 0.058214535378928914\n",
+      "16 0.053260136560066056\n",
+      "17 0.04907562481484776\n",
+      "18 0.045498105372166524\n",
+      "19 0.04240677626218235\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train your NN!\n",
+    "\n",
+    "learning_rate = 0.05\n",
+    "steps = 20\n",
+    "\n",
+    "for k in range(steps):\n",
+    "    # 1. Forward pass\n",
+    "    ypred = [n(x) for x in xs]\n",
+    "    loss = sum((youts - ygt)**2 for ygt, youts in zip(ys, ypred))\n",
+    "\n",
+    "    # 2. Backward pass\n",
+    "    # derive the gradient of each neuron\n",
+    "    for p in n.parameters():\n",
+    "        p.grad = 0.0\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # 3. Nudge\n",
+    "    # Gradient descent\n",
+    "    # nudging the data of each parameter in the direction of its gradient\n",
+    "    for p in n.parameters():\n",
+    "        p.data += -learning_rate * p.grad\n",
+    "\n",
+    "    print(k, loss.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "id": "665c0dc1-d89f-478e-ad5e-4703536d34b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Value(0.6425749477179892),\n",
+       " Value(0.951340245697114),\n",
+       " Value(-0.9629877735481899),\n",
+       " Value(0.23224008442703278)]"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ypred"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2cbe9c0-e63b-44cc-86c0-4cdcab602f85",
+   "id": "fe751280-fe2f-4fc0-b6b0-08d67358b488",
    "metadata": {},
    "outputs": [],
    "source": []
