Arrived at same bigram list using NN gradient descent

--- a/notebooks/zth_2_makemore.ipynb
+++ b/notebooks/zth_2_makemore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 71,
    "id": "8323b98c-eef7-4490-a072-e31b6f8f1733",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "id": "3ff81337-d78d-4962-8041-910e9c11d1d0",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 73,
+   "id": "4f96aa26-080a-4d6f-8a91-9b4c1d05be11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ----- #\n",
+    "# Implementation of bigram prediction model\n",
+    "# ----- #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "id": "0cc6a149-2c98-4e86-b97e-deb72512f8ec",
    "metadata": {},
    "outputs": [],
@@ -39,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "id": "15e7962e-77bd-4801-b6d8-02d15753efbc",
    "metadata": {},
    "outputs": [],
@@ -55,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 76,
    "id": "5de95691-9df2-443b-b82f-3d095db4768c",
    "metadata": {},
    "outputs": [
@@ -65,7 +77,7 @@
        "(np.float64(-0.5), np.float64(26.5), np.float64(26.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -88,12 +100,12 @@
     "        chstr = itos[i] + itos[j]\n",
     "        plt.text(j, i, chstr, ha=\"center\", va=\"bottom\", color=\"gray\")\n",
     "        plt.text(j, i, N[i,j].item(), ha=\"center\", va=\"top\", color=\"gray\")\n",
-    " plt.axis(\"off\")"
+    "plt.axis(\"off\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 149,
    "id": "29cc0ba6-f3f9-4858-926e-786e639c0590",
    "metadata": {},
    "outputs": [
@@ -105,32 +117,19 @@
       "momasurailezitynn.\n",
       "konimittain.\n",
       "llayn.\n",
-      "ka.\n",
-      "da.\n",
-      "staiyaubrtthrigotai.\n",
-      "moliellavo.\n",
-      "ke.\n",
-      "teda.\n",
-      "ka.\n",
-      "emimmsade.\n",
-      "enkaviyny.\n",
-      "ftlspihinivenvorhlasu.\n",
-      "dsor.\n",
-      "br.\n",
-      "jol.\n",
-      "pen.\n",
-      "aisan.\n",
-      "ja.\n"
+      "ka.\n"
      ]
     }
    ],
    "source": [
+    "N += 1  # model smoothing, make sure every combination is at least 1\n",
+    "\n",
     "P = N.float()\n",
     "P /= P.sum(1, keepdim=True)\n",
     "\n",
     "g = torch.Generator().manual_seed(2147483647)\n",
     "\n",
-    "for _ in range(20):\n",
+    "for _ in range(5):\n",
     "    x_i = 0  # Sampling from 0th row because word should start with . special char\n",
     "    out = []\n",
     "    while True:\n",
@@ -145,8 +144,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "f7386486-3c4f-4a70-b207-6074a2280839",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "log_likelihood=tensor(-559951.5625)\n",
+      "nll=tensor(559951.5625)\n",
+      "avg=2.4543561935424805\n"
+     ]
+    }
+   ],
+   "source": [
+    "# negative log likelihood, 0 is best\n",
+    "log_likelihood = 0.0\n",
+    "n = 0\n",
+    "\n",
+    "# words = [\"lawrence\"]\n",
+    "for w in words:\n",
+    "    chrs = [sp] + list(w) + [sp]\n",
+    "    for c1, c2 in zip(chrs, chrs[1:]):\n",
+    "        c1_i = stoi[c1]\n",
+    "        c2_i = stoi[c2]\n",
+    "        prob = P[c1_i, c2_i]\n",
+    "        log_prob = torch.log(prob)\n",
+    "        log_likelihood += log_prob\n",
+    "        n += 1\n",
+    "        # print(f\"{c1}{c2}: {prob:.4f} {log_prob:.4f}\")\n",
+    "\n",
+    "print(f\"{log_likelihood=}\")\n",
+    "nll = -log_likelihood\n",
+    "print(f\"{nll=}\")\n",
+    "print(f\"avg={nll/n}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "41c462f3-4058-4c5d-984b-81008d785faa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ----- #\n",
+    "# Implementation of NN bigram prediction model\n",
+    "# ----- #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "7c2f110a-6f4f-4fa9-b66a-b8a120ff6dcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs, ys = [], []\n",
+    "\n",
+    "for word in words:\n",
+    "    w = [sp] + list(word) + [sp]\n",
+    "    for c1, c2 in zip(w, w[1:]):\n",
+    "        c1_i = stoi[c1]\n",
+    "        c2_i = stoi[c2]\n",
+    "        xs.append(c1_i)\n",
+    "        ys.append(c2_i)\n",
+    "\n",
+    "xs = torch.tensor(xs)\n",
+    "ys = torch.tensor(ys)\n",
+    "x_len = xs.nelement()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "67c5a735-3685-4c69-8afb-8733575a0499",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "W = torch.randn((27, 27), generator=g, requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "8b71b75a-2b8d-4677-b8c5-1e633ca10ff9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7686190605163574\n",
+      "3.3788065910339355\n",
+      "3.161090850830078\n",
+      "3.0271859169006348\n",
+      "2.9344842433929443\n",
+      "2.867231607437134\n",
+      "2.8166539669036865\n",
+      "2.777146339416504\n",
+      "2.7452542781829834\n",
+      "2.7188303470611572\n",
+      "2.696505546569824\n",
+      "2.6773722171783447\n",
+      "2.6608052253723145\n",
+      "2.6463515758514404\n",
+      "2.633665084838867\n",
+      "2.622471570968628\n",
+      "2.6125476360321045\n",
+      "2.6037068367004395\n",
+      "2.595794916152954\n",
+      "2.5886809825897217\n",
+      "2.5822560787200928\n",
+      "2.5764293670654297\n",
+      "2.5711236000061035\n",
+      "2.5662729740142822\n",
+      "2.5618226528167725\n",
+      "2.5577261447906494\n",
+      "2.5539438724517822\n",
+      "2.550442695617676\n",
+      "2.5471930503845215\n",
+      "2.5441696643829346\n",
+      "2.5413525104522705\n",
+      "2.538721799850464\n",
+      "2.536262035369873\n",
+      "2.5339581966400146\n",
+      "2.5317976474761963\n",
+      "2.5297679901123047\n",
+      "2.527859926223755\n",
+      "2.5260636806488037\n",
+      "2.5243704319000244\n",
+      "2.522773265838623\n",
+      "2.52126407623291\n",
+      "2.519836902618408\n",
+      "2.5184857845306396\n",
+      "2.5172054767608643\n",
+      "2.515990734100342\n",
+      "2.5148375034332275\n",
+      "2.5137407779693604\n",
+      "2.512698173522949\n",
+      "2.511704921722412\n",
+      "2.5107581615448\n",
+      "2.509854793548584\n",
+      "2.5089924335479736\n",
+      "2.5081682205200195\n",
+      "2.507380485534668\n",
+      "2.5066258907318115\n",
+      "2.5059030055999756\n",
+      "2.5052106380462646\n",
+      "2.5045459270477295\n",
+      "2.5039076805114746\n",
+      "2.503295421600342\n",
+      "2.5027060508728027\n",
+      "2.5021398067474365\n",
+      "2.501594305038452\n",
+      "2.5010695457458496\n",
+      "2.500563383102417\n",
+      "2.5000758171081543\n",
+      "2.4996049404144287\n",
+      "2.499150514602661\n",
+      "2.4987120628356934\n",
+      "2.49828839302063\n",
+      "2.4978787899017334\n",
+      "2.4974827766418457\n",
+      "2.4970998764038086\n",
+      "2.4967291355133057\n",
+      "2.496370315551758\n",
+      "2.4960227012634277\n",
+      "2.4956860542297363\n",
+      "2.4953596591949463\n",
+      "2.4950428009033203\n",
+      "2.494736433029175\n",
+      "2.494438648223877\n",
+      "2.4941492080688477\n",
+      "2.4938690662384033\n",
+      "2.4935967922210693\n",
+      "2.4933319091796875\n",
+      "2.493075132369995\n",
+      "2.4928252696990967\n",
+      "2.492582321166992\n",
+      "2.4923462867736816\n",
+      "2.492116689682007\n",
+      "2.4918932914733887\n",
+      "2.491675853729248\n",
+      "2.491464376449585\n",
+      "2.491258382797241\n",
+      "2.491058111190796\n",
+      "2.4908628463745117\n",
+      "2.4906723499298096\n",
+      "2.4904870986938477\n",
+      "2.4903066158294678\n",
+      "2.4901304244995117\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Gradient descent ---\n",
+    "\n",
+    "learning_rate = 50\n",
+    "for _ in range(100):\n",
+    "    # 1. forward pass\n",
+    "    xenc = F.one_hot(xs, num_classes=27).float() # One hot encode\n",
+    "    # plt.imshow(xenc)\n",
+    "    \n",
+    "    logits = xenc @ W  # matrix multiplication, predict lof counts\n",
+    "    \n",
+    "    # Soft max activation function\n",
+    "    counts = logits.exp()  # get the counts, eqv. to N\n",
+    "    probs = counts / counts.sum(1, keepdim=True)  # probability for the next char given the input\n",
+    "    \n",
+    "    loss = -probs[torch.arange(x_len), ys].log().mean()\n",
+    "    loss += 0.01 * (W**2).mean() # Regularization\n",
+    "    print(loss.item())\n",
+    "\n",
+    "    # 2. backward pass\n",
+    "    W.grad = None\n",
+    "    loss.backward()\n",
+    "    \n",
+    "    # 3. nudge\n",
+    "    W.data += -learning_rate * W.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "c5092620-8e41-4761-9aaa-3d9e4a6956e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cexze.\n",
+      "momasurailezityha.\n",
+      "konimittain.\n",
+      "llayn.\n",
+      "ka.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sampling from NN\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "for _ in range(5):\n",
+    "    x_i = 0\n",
+    "    out = []\n",
+    "    while True:\n",
+    "        xenc = F.one_hot(torch.tensor([x_i]), num_classes=27).float()\n",
+    "        logits = xenc @ W \n",
+    "        counts = logits.exp()\n",
+    "        probs = counts / counts.sum(1, keepdim=True)\n",
+    "\n",
+    "        x_i = torch.multinomial(probs, num_samples=1, replacement=True, generator=g).item()\n",
+    "        out.append(itos[x_i])\n",
+    "        \n",
+    "        if x_i == 0:\n",
+    "            print(''.join(out))\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "691ff362-322f-4a8a-acf4-74df6f95e2f7",
    "metadata": {},
    "outputs": [],
    "source": []
